SynProdGITV1/force-app/main/default/objects/Product_Stock_Data__c/Product_Stock_Data__c.object-meta.xml
<CustomObject>
    <label>Product Stock Data</label>
    <nameField>
        <displayFormat>PSDM-{00000000}</displayFormat>
        <label>Product Stock Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Stock Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>