SynProdGITV1/force-app/main/default/objects/Product_Stock_Data__c/fields/Date_of_Stock_Below_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Stock_Below_Threshold__c</fullName>
    <description>SS2-T117 Date on which Stock went Below Threshold</description>
    <label>Date of Stock Below Threshold</label>
    <type>DateTime</type>
</CustomField>