SynProdGITV1/force-app/main/default/objects/Product_Stock_Data__c/fields/Product_Plant_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Plant_Id__c</fullName>
    <label>Product Plant Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>