SynProdGITV1/force-app/main/default/objects/Product_Stock_Data__c/fields/Product_Stock_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Stock_External_ID__c</fullName>
    <description>External ID for Product Stock Data</description>
    <externalId>true</externalId>
    <inlineHelpText>Combination of Product Code and Enorica Plant</inlineHelpText>
    <label>Product Stock External ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>