SynProdGITV1/force-app/main/default/objects/Product_Stock_Data__c/fields/Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Stock_Level__c</fullName>
    <label>Stock Level</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>