SynProdGITV1/force-app/main/default/objects/Product_Stock_Data__c/fields/Stock_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Stock_Threshold__c</fullName>
    <label>Stock Threshold</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>